# NCurses_cpp

./: CMakeLists.txt  README.md
include/: nc_window.h
src/: main.cpp  nc_master_window.cpp  nc_window.cpp
